ajuste dos botões do filtro

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ body {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 40px;
-  margin-left: 30px;
+  margin-left: 50px;
 
 }
 .card {
@@ -41,8 +41,12 @@ body {
   border-radius: 16px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(59, 47, 47, 0.1);
-}
 
+
+}
+.card task {
+  margin-right: 50px;
+}
 
 .text-primary {
   color: var(--text-primary);
@@ -92,8 +96,8 @@ input[type="checkbox"]:checked:hover {
   border: none;
   border-radius: 8px;
   padding: 8px 14px;
-  margin-left: 5px;
-  margin-top: 6px;
+  margin-left: 10px;
+  margin-top: 20px;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
